--- a/css/main.css
+++ b/css/main.css
@@ -18,24 +18,36 @@
 }
 
 #nav-button {
-    background: black;
-    border: none;
-    padding: 6px 20px 6px 20px;
-    font-size: 1em;
-    color: white;
+    padding: 5px 15px;
     position: fixed;
     left: 0;
-    top: 50px;
+    top: 0;
     z-index: 1;
 }
 
+#nav-button div {
+    width: 32px;
+    height: 3px;
+    margin: 7px 0;
+    background-color: black;
+}
+
+#nav-button:hover {
+    cursor: pointer;
+}
+
+#nav-button:hover div {
+    background-color: #9e9e9e;
+}
+
 #nav-panel {
+    opacity: 0.6;
     display: none;
     text-align: center;
     position: fixed;
     left: 0;
     top: 0;
-    width: 200px;
+    width: 10vw;
     height: 100vh;
     background: black;
     z-index: 2;
@@ -47,8 +59,7 @@
     color: white;
 }
 
-#nav-panel li:hover,
-#nav-button:hover {
+#nav-panel li:nth-child(n+3):hover {
     background: #9E9E9E;
     cursor: pointer;
 }
@@ -59,4 +70,20 @@
 
 #nav-panel li:first-child:hover {
     background: #8bc34a;
+    cursor: pointer;
+}
+
+#search-box input {
+    margin-top: 10px;
+    height: 29px;
+    width: 100%;
+    padding: 0 12px 0 30px;
+    background: white url("../imgs/search.svg") 2px 1px no-repeat;
+    border: 1px solid;
+    border-color: #a8acbc #babdcc #c0c3d2;
+    border-radius: 13px;
+}
+
+#search-box input:focus {
+    outline: 0;
 }
